--- a/Turan_(lidn,_Venäma).mw
+++ b/Turan_(lidn,_Venäma).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Turanan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 4,921
- | Voz' = 2017
+ | Eläjiden lugu = 4,916
+ | Voz' = 2021
  | Pind = 92
  | Fail = Туран в середине осени.JPG
- | Pämez' = Tat'jana Koval'nogih<br />(2018, ''velgusentäutai'')
+ | Pämez' = Ajas Dongak<br />(sulaku 2020—)
  | Telefonkod = +7-39435-xx-xxx
  | Avtokod = 17
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,7 +19,7 @@
 == Istorii ==
 Se om ezmäine venämalaine eländpunkt Tuvas. Turanan aluz om pandud külähä vl 1885. Külä sai lidnan statusad vl 1945.
 
-Lidn šingotase sauvondedheotandoil da maižanduzturizmal (maralankazvatuz).
+Turan-lidn šingotase sauvondedheotandoil da maižanduzturizmal (maralankazvatuz).
 
 == Geografijan andmused ==
 Lidn sijadase ühtennimižen jogen randal (mülüb [[Jenisei]]n basseinha), 861 m ü.m.t. keskmäižel korktusel. Matkad [[Kizil]]an röunhasai om 65 km suvhe, se om lähembaine lidn.
@@ -27,15 +27,22 @@ Lidn sijadase ühtennimižen jogen randal (mülüb [[Jenisei]]n basseinha), 861 
 Koume žilod (arbanad) mülüdas lidnankundha Turanan ližaks. Lidnankundan pind — 94,01 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 4 981 ristitud, lidnankundan — 5 695 ristitud, kožuunan nell' seičemendest. Kaikiš suremb lidnan ristitišt oli läz 6 tuhad eläjid vll 1989−1998 (6 tuh. rist. vl 1998). Vl 2017 kaik 5 670 ristitud elihe lidnankundas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 4 981 ristitud, lidnankundan — 5 695 ristitud, kožuunan nell' seičemendest. Kaikiš suremb lidnan ristitišt oli läz 6 tuhad eläjid vll 1989−1998 (6 tuh. rist. vl 1998). Vl 2017 kaik 4 921 ristitud elihe lidnas i 5 670 ristitud kaikes lidnankundas.
 
-Buddizman suburgan om olmas lidnas vspäi 2012. Hristanuskondan ph. Innokentijan Irkutskalaižen jumalanpert' oli saudud vl 1914, udessündutadud 1990-nzil vozil.
+[[Buddizm]]an suburgan om olmas lidnas vspäi 2012. [[Hristanuskond]]an ph. Innokentijan Irkutskalaižen jumalanpert' oli saudud vl 1914, se om udessündutadud 1990-nzil vozil. Uz' ph. Vladimir-ruhtinasen pühäpert' ([[ortodoksine hristanuskond]]) om avaitud lidnas vl 2017.
 
 Rahvahad (enamba 0,5% vn 2002 Venäman rahvahanlugemižen mödhe, ozutadud rahvahudenke): [[venälaižed]] — 59,0%, [[tuvalaižed]] — 36,8%, [[hakaslaižed]] — 0,7%, [[armenijalaižed]] — 0,6%, [[ukrainalaižed]] — 0,6%, toižed rahvahad — 2,3%.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Субурган.JPG|Suburgan Turanas, vn 2012 nägu
+Князь-Владимирский храм в Туране.jpg|Ph. Vladimir-ruhtinasen pühäpert', vn 2017 nägu
+Туран. Тыва.JPG|Lidnan keskuzpalan ühthine nägu, 7. kül'mku 2012
+</gallery>
+
 == Irdkosketused ==
-* [http://www.admgorodaturana.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admgorodaturana.ru'').] {{ref-ru}}
-{{Commons|Category:Turan}}
+* [http://www.город-туран.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''город-туран.рф'').] {{ref-ru}}
+{{Commons|Category:Turan (Tuva Republic)}}
 
 {{Tuvan Tazovaldkundan lidnad}}
 
