--- a/Sajanogorsk.mw
+++ b/Sajanogorsk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Sajanogorsk<br />Саяногорск <small>(ven. i hak.)</small>
- | Lidnanznam = Sayanogorsk gerb FRL-KEANE-RUSSIA.jpg
+ | Lidnanznam = Sayanogorsk COA (2008).gif
  | Flag = Flag of Sayanogorsk (Khakassia).png
  | Lidnanznam text = Sajanogorskan lidnanznam
  | Flag text = Sajanogorskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 47,983
- | Voz' = 2017
+ | Eläjiden lugu = 45,384
+ | Voz' = 2021
  | Pind = 19
  | Fail = SAYANOGORSK VUE GEN VILLE.jpg
- | Pämez' = Leonid Bikov (2004—)
+ | Pämez' = Mihail Valov<br />(sügüz'ku 2018—)
  | Telefonkod = +7-39042-xx-xxx
  | Avtokod = 19
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,15 +19,25 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1830 kuti ''Označennoje-külä'' kaičemha Venäman röunad. Vozil 1965−1975 šingotihe sidä lidnanvuččeks žiloks sauvomha järedad gidroelektrostancijad, miše sada alüminijad. Vl 1975 žilo sai lidnan statusad nügüdläiženke nimenke.
 
+Sajanogorsk ižandusen päsarakod oma [[alüminii|alüminijan]] da sen ühthesuladusiden pästand (kaks' alüminijantegint), gidroenergetik ([[Sajanan-Šušenskojen GES]] vspäi 1978). Kaks' specialižen keskopendusen aluzkundad ratas lidnas.
+
 == Geografijan andmused ==
 Lidn sijadase [[Jenisei|Jenisei-jogen]] hural randal, [[Päivlaskmaine Sajan|Päivlaskmaižen Sajanan]] pautkidenno 300 m korktusel valdmeren pindan päl, [[step'|stepin]] zonas. Matkad [[Abakan]]hasai om 80 km pohjoižhe. Om ümbärtud [[Bejan rajon]]al.
 
-Sajanogorsk jagase 10 lidnanlaptha. Lähižed lidnanvuiččed Čerömuški- da Main-žilod mülüdas lidnümbrikho Sajanogorskan ližaks.
+Sajanogorsk jagase kümneks lidnanlaptaks. Lähižed lidnanvuiččed Čerömuški- da Main-žilod mülüdas lidnümbrikho Sajanogorskan ližaks.
 
-== Eläjad da ižanduz ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 49 887 ristitud, lidnümbrikon — 63 322 ristitud. Vodele 2017 lidnümbrikon ristitišt poleni 61 013 eläjhasai. Kaikiš suremb lidnan ristitišt oli vl 1996 — 56 tuhad eläjid.
+== Eläjad ==
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 49 887 ristitud, lidnümbrikon — 63 322 ristitud. Vodele 2017 lidnan ristitišt poleni 47 983 eläjhasai, lidnümbrikon — 61 013 ristithusai. Kaikiš suremb lidnan ristitišt oli 56 tuhad eläjid vl 1996.
 
-Ižandusen päsarakod oma [[alüminii|alüminijan]] da sen ühthesuladusiden pästand (kaks' alüminijantegint), gidroenergetik ([[Sajanan-Šušenskojen GES]] vspäi 1978). Kaks' specialižen keskopendusen aluzkundad ratas lidnas.
+Lidnan edeline pämez' om Leonid Bikov (viluku 2004 — sügüz'ku 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Саяногорский алюминиевый завод.jpg|Sajanogorskan alüminijantegim («[[RUSAL]]»-kompanii) vl 2011
+Главный вход в административное здание СТЭМИ.jpg|Sajanan STEMI-tehnikuman pätulend (2021)
+Станция Саяногорск.jpg|Dizel'jonuz Sajanogorsk-raudtestancijal vl 2011
+ДПСаА3-0001 М62-1857 Предзаводская 2.jpg|Dizel'jonuz Predzavodskai-raudtestancijal läz lidnad vl 2011
+</gallery>
 
 == Irdkosketused ==
 * [http://www.sayan-adm.ru/ Sajanogorsk-lidnan tobmuden aluzkundoiden oficialine sait (''sayan-adm.ru'').] {{ref-ru}}
