--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -2,7 +2,7 @@
 
 Päiškendod hogahti Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanuid, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i "denacifikacii".
 
-Venäman hogahtuz Ukrainan territorijaha sai agjahišt hondustust äjiš valdkundoiš, potencialižiš hätkeližstrokuižiden jäl'gusidenke Venäman ekonomikale i kundale.
+Venäman hogahtuz Ukrainan territorijaha sai agjahišt hondustust äjiš valdkundoiš, potencialižiden hätkeližstrokuižiden jäl'gusidenke Venäman ekonomikale i kundale.
 {{stub}}
 
 [[Kategorii:Sodad]]
