--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,4 +1,4 @@
-'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Venäman specialine sodaoperacii Ukrainas''' ([[venän kel'|ven.]]: ''Cпециальная военная операция России на Украине'')) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 23. päiväl]] aigoiš homendesel. Necen edes Venäma plananmärižes kogozi väged lähen Ukrainan röunad, a mugažo [[Putin Vladimir|Putin]]-prezident oficialižes tundišti [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut.
+'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii Donbassas''' ([[venän kel'|ven.]]: ''Cпециальная военная операция на Донбассе'')) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 23. päiväl]] aigoiš homendesel. Necen edes Venäma plananmärižes kogozi väged lähen Ukrainan röunad, a mugažo [[Putin Vladimir|Putin]]-prezident oficialižes tundišti [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut.
 
 Päiškendod hogahti Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanuid, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i "denacifikacii".
 
