--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,6 +1,6 @@
 '''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii Donbassas''' ([[venän kel'|ven.]]: ''Cпециальная военная операция на Донбассе'')) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 23. päiväl]] aigoiš homendesel. Necen edes Venäma plananmärižes kogozi väged lähen Ukrainan röunad, a mugažo [[Putin Vladimir|Putin]]-prezident oficialižes tundišti [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut.
 
-Päiškendod hogahti Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanuid, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i "denacifikacii".
+Päiškendod hogahtiba Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanuid, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i "denacifikacii".
 
 Venäman hogahtuz Ukrainan territorijaha sai agjahišt hondustust äjiš valdkundoiš, potencialižiden hätkeližstrokuižiden jäl'gusidenke Venäman ekonomikale i kundale.
 {{stub}}
