--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,10 +1,12 @@
-'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii''' ([[venän kel'|ven.]]: ''Специальная военная операция'')) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 23. päiväl]] aigoiš homendesel. Necen edes Venäma plananmärižes kogozi väged lähen Ukrainan röunad, a mugažo [[Putin Vladimir|Putin]]-prezident oficialižes tundišti [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut.
+'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция'}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud.
 
-Päiškendod hogahtiba Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanuid, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i "denacifikacii".
+Päiškendod hogahtiba Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanui, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i «denacifikacii».
 
 Venäman hogahtuz Ukrainan territorijaha sai agjahišt hondustust äjiš valdkundoiš, potencialižiden hätkeližstrokuižiden jäl'gusidenke Venäman ekonomikale i kundale.
-{{stub}}
 
+Ukrainan [[Vladimir Zelenskii]]-prezident tegi tedotust, miše Venäman sodategendoiden pämet om Ukrainan likvidiruind valdkundaks. Vägitungendan päiväl Ukrain rebiti diplomatižid kosketusid Venämanke, Zelenskii-prezident pani sodaolendad Ukrainan territorijal. Üleine mobilizacii om tedotadud Ukrainas 25. uhokud.
+
+{{stub}}
 [[Kategorii:Sodad]]
 [[Kategorii:Venäman istorii]]
 [[Kategorii:Ukrainan istorii]]
