--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,4 +1,4 @@
-'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция'}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud.
+'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] dai [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud.
 
 Päiškendod hogahtiba Ukrainan päivnouzmha, pohjoižhe dai ehtbokha. Putin sanui, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i «denacifikacii».
 
