--- a/Mail'manreligijad.mw
+++ b/Mail'manreligijad.mw
@@ -1,4 +1,4 @@
-[[Fail:World religions map ru.svg|thumb|right|450px|[[Venäkel']]ne religijoiden kart.]]
+[[Fail:World religions map ru.svg|thumb|right|450px|Prevalirujiden religijoiden kart valdkundoidme (2011, [[venäkel']]ne)]]
 '''Mail'manreligii''' om levitadud religii erazvuiččiden maiden i kontinentiden rahvahiden keskes.
 
 Mail'mas om [[3 (lugu)|koume]] '''[[religii|päreligijad]]''':
@@ -10,6 +10,8 @@ Toižed levitadud mail'mas religijad oma [[induizm]] (kandidat mail'manreligijoi
 
 == Homaičendad ==
 <references />
+
+{{Commons|Category:Major religious groups}}
 
 {{stub}}
 [[Kategorii:Religii]]
