--- a/Mail'manreligijad.mw
+++ b/Mail'manreligijad.mw
@@ -1,5 +1,5 @@
 [[Fail:World religions map ru.svg|thumb|right|450px|Prevalirujiden religijoiden kart valdkundoidme (2011, [[venäkel']]ne)]]
-'''Mail'manreligii''' om levitadud religii erazvuiččiden maiden i kontinentiden rahvahiden keskes.
+'''Mail'manreligii''' om levitadud religii erazvuiččiden maiden i kontinentiden rahvahiden keskes. Se ühtenzoitab ristituid ühthižel opendusel ripmata heiden etnižiš, kelen i politikan kosketusišpäi, nacionaližen i valdkundaližen religijan erineden.
 
 Mail'mas om [[3 (lugu)|koume]] '''[[religii|päreligijad]]''':
 # '''[[Hristanuskond]]''' (läz 2,1 milliardad ristituid)
