--- a/Rafael'_Santi.mw
+++ b/Rafael'_Santi.mw
@@ -3,7 +3,11 @@
 | изображение = Sanzio 00.jpg
 | описание изображения = Rafael' Santi, vn 1506 avtoportret
 }}
-'''Rafael' Santi''' vai muite '''Rafael'''' (täuded nimed [[italijan kel'|italijan kelel]]: ''Raffaello Santi, Raffaello Sanzio, Raffael da Urbino, Rafael, Rafaelo''; sünd. 28. keväz'ku vai 6. sulaku 1483, [[Urbino]], [[Italii|Italijan kunigahuz]], [[Pühä Rimalaine imperii]] — kol. 6. sulaku 1520, [[Rim]], Italijan kunigahuz, Pühä Rimalaine imperii) oli sur' [[Italii|italijalaine]] voimujupirdai, grafikanpirdai da arhitektor, [[umbrine škol|umbrižen školan]] ezitai.
+'''Rafael' Santi''' vai muite '''Rafael'''' (täuded nimed [[italijan kel'|italijan kelel]]: ''Raffaello Santi, Raffaello Sanzio, Raffael da Urbino, Rafael, Rafaelo''; sünd. 28. keväz'ku vai 6. sulaku 1483, [[Urbino]], [[Italii|Italijan kunigahuz]], [[Pühä Rimalaine imperii]] — kol. 6. sulaku 1520, [[Rim]], Italijan kunigahuz, Pühä Rimalaine imperii) oli sur' [[Italii|italine]] voimujupirdai, grafikanpirdai da arhitektor, [[umbrine škol|umbrižen školan]] ezitai.
+
+Mez' om Korktan [[Udessündutand]]an čomamahton znamasine šingotai. Ičeze lühüdas elos Rafael' kändihe Italijan ühteks kaikiš tetabambiš da elokahambiš pirdajišpäi.
+
+Čomamahton šingotai kuvazi sädusiš ičeze aigan [[gumanizm]]an korktoid idealoid, ühtenzoiti tulnuzid antikaigaspäi [[čomuz|čomuden]] igähižid ezikuvid udenke hristianiženke mail'mannägendanke. Rafaelin «[[Sikstine Madonna]]»-voikuva (1512−1513) om kaikiš tundištabišpäi istorijas.
 
 == Homaičendad ==
 <references/>
