--- a/Cvetajeva_Marina.mw
+++ b/Cvetajeva_Marina.mw
@@ -2,7 +2,12 @@
 | изображение = Marina Tsvetaeva by Max Voloshin 1911.jpeg
 | описание изображения = Marina Cvetajeva vl 1911 ''(foton tegii om [[Maksimilian Vološin]])''
 }}
-'''Marina Ivanovna Cvetajeva''' ({{lang-ru|Марина Ивановна Цветаева}}; sünd. [[8. reduku]] [[1892]], [[Moskv]], [[Venäman imperii]] — kol. [[31. eloku]] [[1941]], [[Jelabug]], [[Tatarstan]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli tetab venämalaine i nevondkundaline runokirjutai da kändai.
+'''Marina Ivanovna Cvetajeva''' ({{lang-ru|Марина Ивановна Цветаева}}; sünd. 26. sügüz'ku ([[8. reduku]]) [[1892]], [[Moskv]], [[Venäman imperii]] — kol. [[31. eloku]] [[1941]], [[Jelabug]], [[Tatarstan]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli tetab venämalaine i nevondkundaline runokirjutai da kändai, prozan kirjutai emigracijas (essed, dramatižed p'jesad).
+
+== Biografii ==
+Naine oli sündnu intelligencijan kanzha. Openui gimnazijoiš, kirjuti runoid kuz'voččes igäspäi. Eli emigracijas vll 1922−1939 (vhesai 1925 [[Prag]]an ezilidnoiš, sid' [[Pariž]]as), gollüdes.
+
+Pördumižen jäl'ghe eli Jelabugas (pert' om kaičenus), rikoi ičtaze löumain läžundan tagut. Cvetajevan lapsed oliba lapsetomad, ka ei jänus oiktoid jäl'gnikoid.
 
 == Homaičendad ==
 <references />
