--- a/Cvetajeva_Marina.mw
+++ b/Cvetajeva_Marina.mw
@@ -2,12 +2,33 @@
 | изображение = Marina Tsvetaeva by Max Voloshin 1911.jpeg
 | описание изображения = Marina Cvetajeva vl 1911 ''(foton tegii om [[Maksimilian Vološin]])''
 }}
-'''Marina Ivanovna Cvetajeva''' ({{lang-ru|Марина Ивановна Цветаева}}; sünd. 26. sügüz'ku ([[8. reduku]]) [[1892]], [[Moskv]], [[Venäman imperii]] — kol. [[31. eloku]] [[1941]], [[Jelabug]], [[Tatarstan]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli tetab venämalaine i nevondkundaline runokirjutai da kändai, prozan kirjutai emigracijas (essed, dramatižed p'jesad).
+'''Marina Ivanovna Cvetajeva''' ({{lang-ru|Марина Ивановна Цветаева}}; sünd. 26. sügüz'ku ([[8. reduku]]) [[1892]], [[Moskv]], [[Venäman imperii]] — kol. [[31. eloku]] [[1941]], [[Jelabug]], [[Tatarstan]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Hobedaine aig|Hobedaižen aigan]] tetab venämalaine i nevondkundaline runokirjutai da kändai, prozan kirjutai emigracijas (essed, dramatižed p'jesad).
 
 == Biografii ==
 Naine oli sündnu intelligencijan kanzha. Openui gimnazijoiš, kirjuti runoid kuz'voččes igäspäi. Eli emigracijas vll 1922−1939 (vhesai 1925 [[Prag]]an ezilidnoiš, sid' [[Pariž]]as), gollüdes.
 
 Pördumižen jäl'ghe eli Jelabugas (pert' om kaičenus), rikoi ičtaze löumain läžundan tagut. Cvetajevan lapsed oliba lapsetomad, ka ei jänus oiktoid jäl'gnikoid.
+
+== Sädused ==
+=== Poemad ===
+* Noid (1914, {{lang-ru|Чародей}})
+* Rusttan Hebon rachal (1921, ''На Красном Коне'')
+* Mägen poem (1924, 1939, ''Поэма Горы'')
+* Lopun poem (1924, ''Поэма Конца'')
+* Nügahirentabadai (1925, ''Крысолов'')
+* Merespäi (1926, ''С моря'')
+* Honusen naprind (1926, ''Попытка комнаты'')
+* Pordhiden poem (1926, ''Поэма Лестницы'')
+* Udele vodele (1927, ''Новогоднее'')
+* Il'man poem (1927, ''Поэма Воздуха'')
+* Rusked härgut (1928, ''Красный бычок'')
+* Kaivandsija (1929, ''Перекоп'')
+* Sibir' (1930, ''Сибирь'')
+
+;Poemad-sarnad
+* Car'neižne (1920, ''Царь-Девица'')
+* Kujokarkad (1922, ''Переулочки'')
+* Vägev priha (1922, ''Мо́лодец'')
 
 == Homaičendad ==
 <references />
