--- a/Sajanogorsk.mw
+++ b/Sajanogorsk.mw
@@ -33,6 +33,7 @@ Lidnan edeline pämez' om Leonid Bikov (viluku 2004 — sügüz'ku 2018).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
+Shhpp21.jpg|Sajanan-Šušenskojen GES vl 2021
 Саяногорский алюминиевый завод.jpg|Sajanogorskan alüminijantegim («[[RUSAL]]»-kompanii) vl 2011
 Главный вход в административное здание СТЭМИ.jpg|Sajanan STEMI-tehnikuman pätulend (2021)
 Станция Саяногорск.jpg|Dizel'jonuz Sajanogorsk-raudtestancijal vl 2011
