--- a/Abaz_(lidn).mw
+++ b/Abaz_(lidn).mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Abaz<br />Абаза <small>(ven. i hak.)</small>
  | Lidnanznam = Coat of Arms of Abaza (Khakassia).png
- | Flag = 
+ | Flag = Flag of Abaza.png
  | Lidnanznam text = Abazan lidnanznam
- | Flag text = 
+ | Flag text = Abazan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 15,592
- | Voz' = 2017
+ | Eläjiden lugu = 14,816
+ | Voz' = 2021
  | Pind = 17
  | Fail = Город Абаза.jpg
  | Pämez' = Valentina Filimonova<br />(sügüz'ku 2017—)
@@ -14,10 +14,13 @@
  | Avtokod = 19
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
+[[Fail:Church in Abaza , Khakasia.jpg|thumb|left|250px|Jumalanmaman Blagoveššenjan uz' kivine pühäpert' om sauvomas, vn 2019 nägu]]
 '''Abaz''' ([[venän kel'|ven]]. i {{lang-kjh|Абаза}}) om [[Venäma]]n lidn da lidnümbrik [[Hakasijan Tazovaldkund]]an suves.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1856 žiloks otamha kävutamižhe [[raud|raudkivendon]] löudmižsijad. Vll 1867−1926 kaugedraudantegim radoi žilos. Vl 1957 raudan samine zavodihe möst, i vl 1966 lidnanvuitte žilo sai lidnan statusad. Lidn šingotase raudan samižel i küllästamižfabrikal, mugažo lihakombinat i mecedheotand ratas.
+Eländpunktan aluz om pandud vl 1856 žiloks otamha kävutamižhe [[raud|raudkivendon]] löudmižsijad. Vl 1868 kätihe žilod ''Abakano-Zavodskai''-küläks. Vll 1867−1926 kaugedraudantegim radoi siš. Vl 1920 panihe küläd volostin keskuseks, i vl 1921 udesnimitihe ''Abaz-žiloks'' ({{lang-ru|село Абаза}}, enččen nimitusen [[akronim]]: '''Аба'''кано-'''За'''водская). Kätihe Abaz-žilod lidnanvuiččeks vl 1956. Vl 1957 raudan samine zavodihe möst, i vl 1966 lidnanvuitte žilo sai lidnan statusad.
+
+Abaz šingotase raudan samižel i küllästamižfabrikal, mugažo lihakombinat i mecedheotand ratas.
 
 == Geografijan andmused ==
 Lidn sijadase Abakan-jogen molembil randoil ([[Jenisei]]n hura ližajogi), mägidenkeskeižes katl'uses, 450 m ü.m.t. keskmäižel korktusel. Matkad [[Abakan]]hasai om 150 km pohjoižpäivnouzmha orhal vai 187 km avtotedme. Lähembaine lidn om [[Sajanogorsk]] 100 km pohjoižpäivnouzmha orhal vai 170 km avtol. Raudtesarak lopiše lidnas, se lähteb «Abakan — [[Novokuzneck]]»-jonospäi, oigetas küllästoittud raudkivendod Novokuzneckan edheotandoihe.
@@ -27,7 +30,7 @@ Abaz om lidnümbrikon üks'jäine eländpunkt. Om ümbärtud [[Taštipan rajon]]
 == Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 115 ristitud. Kaikiš suremb ristitišt oli 18 700 eläjad vll 2000−2001.
 
-Černogorskan kaivuzsauvondtehnikuman filial om professionaližen opendusen aluzkundaks.
+[[Černogorsk]]an kaivuzsauvondtehnikuman filial om professionaližen opendusen aluzkundaks.
 
 == Irdkosketused ==
 * [http://www.abaza-adm.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''abaza-adm.ru'').] {{ref-ru}}
