*Empty MediaWiki Message*

--- a/Abaz_(lidn).mw
+++ b/Abaz_(lidn).mw
@@ -14,11 +14,11 @@
  | Avtokod = 19
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-[[Fail:Church in Abaza , Khakasia.jpg|thumb|left|250px|Jumalanmaman Blagoveššenjan uz' kivine pühäpert' om sauvomas, vn 2019 nägu]]
+[[Fail:Church in Abaza , Khakasia.jpg|thumb|left|250px|Jumalanmaman Blagoveššenjan uz' kivine pühäpert' om sauvomas ([[ortodoksine hristanuskond]]), vn 2019 nägu]]
 '''Abaz''' ([[venän kel'|ven]]. i {{lang-kjh|Абаза}}) om [[Venäma]]n lidn da lidnümbrik [[Hakasijan Tazovaldkund]]an suves.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1856 žiloks otamha kävutamižhe [[raud|raudkivendon]] löudmižsijad. Vl 1868 kätihe žilod ''Abakano-Zavodskai''-küläks. Vll 1867−1926 kaugedraudantegim radoi siš. Vl 1920 panihe küläd volostin keskuseks, i vl 1921 udesnimitihe ''Abaz-žiloks'' ({{lang-ru|село Абаза}}, enččen nimitusen [[akronim]]: '''Аба'''кано-'''За'''водская). Kätihe Abaz-žilod lidnanvuiččeks vl 1956. Vl 1957 raudan samine zavodihe möst, i vl 1966 lidnanvuitte žilo sai lidnan statusad.
+Eländpunktan aluz om pandud vl 1856 žiloks otamha kävutamižhe [[raud|raudkivendon]] löudmižsijad. Vl 1868 kätihe žilod ''Abakano-Zavodskai''-küläks. Vll 1867−1926 kaugedraudantegim radoi siš. Vl 1920 panihe küläd volostin keskuseks, i vl 1921 udesnimitihe ''Abaz-žiloks'' ({{lang-ru|село Абаза}}, enččen nimitusen [[akronim]]: '''''Аба'''кано-'''За'''водская''). Kätihe Abaz-žilod lidnanvuiččeks vl 1956. Vl 1957 raudan samine zavodihe möst, i vl 1966 lidnanvuitte žilo sai lidnan statusad.
 
 Abaz šingotase raudan samižel i küllästamižfabrikal, mugažo lihakombinat i mecedheotand ratas.
 
