--- a/Nazarovo_(Krasnojarskan_rand).mw
+++ b/Nazarovo_(Krasnojarskan_rand).mw
@@ -39,6 +39,7 @@ Nazarovon agrarine i energetižen sauvomižen tehnikumad oma professionaližen o
 <gallery mode="packed" heights="125px">
 Памятник борцам за советскую власть, погибшим во время подавления Сережского контрреволюцонного вооружённого мятежа 1920 года.jpg|Muštnik vn 1920 nevondkundaližen tobmuden kaičijoile
 Khram nazarowo.jpg|Jumalanmaman Katken pühäpert', vn 2007 nägu
+Назаровский угольный разрез.jpg|Hil'kar'jer läz Nazarovo-lidnad vl 2006
 Музей города Назарово1.jpg|Muzejižozutelendkeskuz (2013)
 </gallery>
 
