--- a/Černogorsk.mw
+++ b/Černogorsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Černogorskan lidnanznam
  | Flag text = Černogorskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 74,698
- | Voz' = 2017
+ | Eläjiden lugu = 75,348
+ | Voz' = 2021
  | Pind = 117.87
- | Fail = Черногорск. Памятник Вере Баландиной.jpg
- | Pämez' = Vasilii Belonogov (2009—)
+ | Fail = Магазин Черногорский - panoramio.jpg
+ | Pämez' = Vasilii Belonogov<br />(2009—)
  | Telefonkod = +7-39031-xx-xxx
  | Avtokod = 19
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -17,17 +17,33 @@
 '''Černogorsk''' ({{lang-ru|Черногорск}}, {{lang-kjh|Харатас}}) om [[Venäma]]n lidn da lidnümbrik [[Hakasijan Tazovaldkund]]as. Se om tazovaldkundan kahtenz' surtte lidn, [[Abakan]]-pälidnan pohjoine kaimdailidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1907 kuti ''Černogorskije Kopi-žilo'' samha [[kivihil'|kivihil't]]. Vl 1936 žilod ühtištoittihe lähevenujidenke kaivuzžiloidenke da anttihe lidnan statusad udenke nügüdläiženke nimenke.
+Eländpunktan aluz om pandud vl 1907 kuti ''Černogorskije Kopi-žilo'' samha [[kivihil'|kivihil't]]. Vl 1936 žilod ühtištoittihe lähevenujidenke kaivuzžiloidenke da anttihe lidnan statusad udenke nügüdläiženke nimenke. Vll 1942−1955 kävutihe türmatud mehiden radod kaivuziš, heiden lugumär saihe 12 tuhazesai aigoidme.
+
+Černogorskan ižandusen päsarak om [[kivihil'|kivihilen]] samine tähäsai.
 
 == Geografijan andmused ==
-Lidn seižub 5 kilometras [[Jenisei|Jenisei-jogen]] hural randalpäi, Minusinskan katl'uses. Matkad lidnan röunaspäi [[Abakan]]an röunhasai om 5 km suvhe. Lidnanvuitte [[Ust'-Abakan]]-žilo sijadase Černogorskan da Jenisein keskes.
+Lidn seižub vides kilometras [[Jenisei|Jenisei-jogen]] hural randalpäi, Minusinskan katl'uses. Matkad lidnan röunaspäi [[Abakan]]an röunhasai om 5 km suvhe. Lidnanvuitte [[Ust'-Abakan]]-žilo sijadase Černogorskan da Jenisein keskes.
 
 Lidnanvuitte Prigorsk-žilo mülüb Černogorskan lidnümbrikho mugažo (2392 rist. vl 2017).
 
-== Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 72 147 ristitud. Kaikiš suremb ristitišt oli vozil 1986−1998, läz 80 tuhad eläjid.
+== Eläjad ==
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 72 147 ristitud. Kaikiš suremb ristitišt oli läz 80 tuhad eläjid vozil 1986−1998 i 75 419 eläjad vl 2020.
 
-Ižandusen päsarak om [[kivihil'|kivihilen]] samine tähäsai. Kaks' specialižen keskopendusen aluzkundad om lidnas: mehaniž-tehnologine i mägisauvondan tehnikumad.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] viž jumalanpertid<ref>[https://sobory.ru/geo/distr/1782 Černogorskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref>, [[valatused|valatusiden]] pühäpert' i časoun' oma olmas lidnas.
+
+Kaks' specialižen keskopendusen aluzkundad om lidnas: mehaniž-tehnologine<ref>[http://spo-chmtt.ru/ Černogorskan mehaniž-tehnologižen tehnikuman sait (''spo-chmtt.ru'').] {{ref-ru}}</ref> i mägisauvondan tehnikumad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Черногорск. Памятник Вере Баландиной.jpg|Muštnik ezmäižen kaivuden Vera Balandina-alusenpanijale
+Черногорск - Памятник погибшим шахтерам.jpg|Muštnik pölištunuzile kaivajile i Pühän Jumalanmaman sündundan jumalanpert' (om saudud vll 1989−1992) tagamal, vn 2013 nägu
+Черногорск. Памятник лётчикам.jpg|Muštnik [[Svobodnii (Amuran agj)|Birm-garnizonan]] sodaaviaškolan lendajile vl 2013
+Школа 4 - panoramio.jpg|Škol nomer 4 (2006)
+Черногорское кольцо - panoramio.jpg|Znam lidnan röunal vl 2002
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://chernogorsk.com/ Lidnan tobmuden aluzkundoiden oficialine sait (''chernogorsk.com'').] {{ref-ru}}
