--- a/Abakan.mw
+++ b/Abakan.mw
@@ -5,21 +5,22 @@
  | Lidnanznam text = Abakanan lidnanznam
  | Flag text = Abakanan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 181,709
- | Voz' = 2017
+ | Eläjiden lugu = 187,239
+ | Voz' = 2021
  | Pind = 112.38
- | Fail = Cathedral in Abakan.jpg
- | Pämez' = Nikolai Bulakin (1995—)
+ | Fail = Абакан с горы Самохвал.jpg
+ | Pämez' = Aleksei Lömin<br />(tal'vku 2019—)
  | Telefonkod = +7-3902-xxx-xxx
  | Avtokod = 19
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
+[[Fail:Abakan location map.png|thumb|left|250px|Lidnan kart (2021)]]
 '''Abakan''' ({{lang-ru|Абакан}}, {{lang-kjh|Ағбан}}) om lidn [[Venäma|Venälaižes Federacijas]], [[Sibir'|Sibirin]] suves. Se om [[Hakasijan Tazovaldkund]]an pälidn da kaikiš suremb lidn.
 
 == Istorii ==
 Ende [[gunnad|gunnoiden]] lidnuz oli olmas Samohval-mägenno. Sid' kalaidajad nimitihe ülüt ''Ah Tigei'' «vauged mägenpa» jurtiden äjüden tagut. Nügüd'aigaižen eländpunktan aluz om pandud vl 1675 kuti Abakanan lidnuz ({{lang-ru|Абаканский острог}}). 1780-nziš vozišpäi nimitihe küläd ''Ust'-Abakanskoje''.
 
-Vl 1925 sauvoihe raudted [[Minusinsk]]hasai i avaidihe Abakan-raudtestancijad. Panihe Hakasijan avtonomijan alust vn 1925 tal'vkus, siš aigaspäi eländpunkt tegihe Hakasijan administrativižeks keskuseks. Eländfartalad sünduiba žilon raudtestancijanno i külän keskes. Vl 1931 kaikile niile anttihe lidnan statusad da udesnimitihe nügüdläižikš.
+Vl 1925 saudihe raudted [[Minusinsk]]hasai i avaidihe Abakan-raudtestancijad. Panihe Hakasijan avtonomijan alust vn 1925 tal'vkus, siš aigaspäi eländpunkt tegihe Hakasijan administrativižeks keskuseks. Eländfartalad sünduiba žilon raudtestancijanno i külän keskes. Vl 1931 kaikile niile anttihe lidnan statusad da udesnimitihe nügüdläižikš.
 
 == Geografijan andmused ==
 Abakan seižub ühtennimižen jogen lanktendan sijas [[Jenisei]]ha (hura ližajogi), Hakasiž-Minusinskan katl'usen keskuses, 250 m korktusel valdmeren pindan päl. Jenisein son' ümbärdab Samohval-mäged lidnas. Matkad [[Moskv]]hasai om 3390 km päivlaskmha orhal. Ezilidnad oma [[Černogorsk]] (lodeheze) i [[Minusinsk]] (päivnouzmha, Jeniseinjogen vastrandal). Lähembaižed järedad lidnad oma [[Meždurečensk]], [[Krasnojarsk]], [[Ačinsk]], [[Novokuzneck]], [[Kizil]].
@@ -28,12 +29,29 @@ Klimat om terav kontinentaline.
 
 Lidn om lidnümbrikon üks'jäine eländpunkt.
 
-== Eläjad da ižanduz ==
+== Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 165 214 ristitud. Kaikiš suremb lidnan ristitišt om nügüd'.
 
+Edeline lidnan pämez' oli Nikolai Bulakin (semendku 1995 — reduku 2019), eli vll 1952−2019.
+
+== Ižanduz ==
 Ižandusen päsarakod oma jüžmak transportine mašinoidensauvomine, sauvondmaterialiden tegimed, sömtegimišt.
 
 Avtobusad da trolleibusad oma kundaližeks transportaks lidnas. Rahvahidenkeskeine civiline Abakan-lendimport (''АБН / ABA'') sijadase lidnan röunanno pohjoižhe keskusespäi, tehtas reisid Venäman Sibirin järedoihe lidnoihe, [[Moskv]]ha, Azijan lähižihe maihe.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация Абакана.jpg|Lidnan administracijan sauvuz (2020)
+Abakan-.jpg|«Lora»-muštpacaz lidnan röunal
+Abakan scenery.jpg|Spasan Toižetamižen kafedraline päjumalanpert', vn 2010 nägu
+Abakan 20.JPG|Südäiazjoiden ministrusen ohjanduz Abakan-lidnadme (2013)
+Abakan 023.jpg|«Hakasenergo»-kompanijan kontor vl 2008
+Хакасский краеведческий музей-2017.jpg|Tazovaldkundan muzejiž-kul'turine keskuz (2017)
+Галерея Пронских.jpg|Abakanan kuvagalerei F. Pronskih nimed (2020)
+Музыкальный фонтан в Абакане (172847407).jpeg|«Abakan»-sportkompleks i muzikfontan senno vl 2016
+Rossiya Tu-214 in front of terminal at Abakan Airport.jpg|[[Tu-214]]-lendim Abakan-lendimportan terminalanno vl 2016
+АБакан - ж-д вокзал.jpg|Abakan-päraudtestancijan sauvused vl 2020
+</gallery>
 
 == Homaičendad ==
 <references />
