--- a/Raičihinsk.mw
+++ b/Raičihinsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Raičihinskan lidnanznam
  | Flag text = Raičihinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 17,590
- | Voz' = 2017
+ | Eläjiden lugu = 16,479
+ | Voz' = 2021
  | Pind =
  | Fail = Райчихинск 26 мая 2012 Благ-Байк.JPG
  | Pämez' = Tat'jana Rodionova<br />(kül'mku 2017—)
@@ -19,15 +19,22 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1932 kuti ''Raičih-žilo'' ({{lang-ru|посёлок Райчиха}}) samha [[bur hil'|burad hil't]], nimitihe jogen mödhe. Vspäi 1934 oli radnikžiloks. Raičih sai lidnan statusad vl 1944, udesnimitihe siloi-žo.
 
+Raičihinsk šingotase buran hilen samižen kar'jeroil tähäsai, niiden ližaks kaivuzmašiništon mehanine kohenduztegim radab. Ende oliba kebntegimišt (mebel', kengiden i omblendfabrikad), sömtegimišt radoi (oludtegim, maidtegim).
+
 == Geografijan andmused ==
 Lidn sijadase Raičih-jogen ([[Amur (jogi)|Amuran]] hura ližajogi) randal, 200 m ü.m.t. keskmäižel korktusel. Matkad [[Kitai]]n valdkundröunhasai (Amur-jogi) om 50 km suvhe, [[Blagoveščensk (Amuran agj)|Blagoveščenskhasai]] om 165 km lodeheze. Lähembaine lidn om [[Zavitinsk]] 40 km pohjoižhe avtotedme. [[Transsib]]an raudtesarak lopiše Raičih-stancijal lidnas vspäi 1934, stancii ei ole rados vspäi 2012.
 
 Koume žilod mülüdas lidnümbrikho Raičihinskan ližaks. Lidnümbrikon pind — 225,52 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 534 ristitud, lidnümbrikon — 21 933 ristitud. Vozil 1959−1967 i vll 1979−1998 ristitišt oli 27..28 tuhad eläjid (vl 1979 — 28 060 rist.). Vl 2017 lidnümbrikon ristitišt — 20 271 eläjad. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Vladimiran Jumalanmaman jumalaižen pühäpert' (1998) om lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 534 ristitud, lidnümbrikon — 21 933 ristitud. Vozil 1959−1967 i vll 1979−1998 ristitišt oli 27..28 tuhad eläjid (28 060 rist. vl 1979). Vl 2017 lidnan ristitišt oli 17 590 eläjad, lidnümbrikon — 20 271 eläjad.
 
-Raičihinskan industrialine tehnikum da Amuran medicinižen kolledžan filial oma professionaližen opendusen aluzkundoikš.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Vladimiran Jumalanmaman jumalaižen pühäpert' (1998) om lidnas.
+
+Raičihinskan industrialine tehnikum<ref>[http://rayit.ru/ Raičihinskan industrialižen tehnikuman sait (''rayit.ru'').] {{ref-ru}}</ref> da Amuran medicinižen kolledžan filial oma professionaližen opendusen aluzkundoikš.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://райчихинск-мо.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''райчихинск-мо.рф'').] {{ref-ru}} {{ref-en}} {{ref-de}}
