*Empty MediaWiki Message*

--- a/Raičihinsk.mw
+++ b/Raičihinsk.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1932 kuti ''Raičih-žilo'' ({{lang-ru|посёлок Райчиха}}) samha [[bur hil'|burad hil't]], nimitihe jogen mödhe. Vspäi 1934 oli radnikžiloks. Raičih sai lidnan statusad vl 1944, udesnimitihe siloi-žo.
 
-Raičihinsk šingotase buran hilen samižen kar'jeroil tähäsai, niiden ližaks kaivuzmašiništon mehanine kohenduztegim radab. Ende oliba kebntegimišt (mebel', kengiden i omblendfabrikad), sömtegimišt radoi (oludtegim, maidtegim).
+Raičihinsk šingotase buran hilen samižen kar'jeroil tähäsai, niiden ližaks kaivuzmašiništon mehanine kohenduztegim radab. Ende oli kebntegimišt (mebel', kengiden i omblendfabrikad), sömtegimišt radoi (oludtegim, maidtegim).
 
 == Geografijan andmused ==
 Lidn sijadase Raičih-jogen ([[Amur (jogi)|Amuran]] hura ližajogi) randal, 200 m ü.m.t. keskmäižel korktusel. Matkad [[Kitai]]n valdkundröunhasai (Amur-jogi) om 50 km suvhe, [[Blagoveščensk (Amuran agj)|Blagoveščenskhasai]] om 165 km lodeheze. Lähembaine lidn om [[Zavitinsk]] 40 km pohjoižhe avtotedme. [[Transsib]]an raudtesarak lopiše Raičih-stancijal lidnas vspäi 1934, stancii ei ole rados vspäi 2012.
@@ -31,7 +31,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 534 rist
 
 [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Vladimiran Jumalanmaman jumalaižen pühäpert' (1998) om lidnas.
 
-Raičihinskan industrialine tehnikum<ref>[http://rayit.ru/ Raičihinskan industrialižen tehnikuman sait (''rayit.ru'').] {{ref-ru}}</ref> da Amuran medicinižen kolledžan filial oma professionaližen opendusen aluzkundoikš.
+Raičihinskan industrialine tehnikum<ref>[http://rayrit.ru/ Raičihinskan industrialižen tehnikuman sait (''rayrit.ru'').] {{ref-ru}}</ref> da Amuran medicinižen kolledžan filial oma professionaližen opendusen aluzkundoikš.
 
 == Homaičendad ==
 <references />
