--- a/Skovorodino.mw
+++ b/Skovorodino.mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Skovorodinon lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 9,231
- | Voz' = 2018
+ | Eläjiden lugu = 8,745
+ | Voz' = 2021
  | Pind = 22
- | Fail = Вокзал Сковородино.JPG
+ | Fail = Сковородино. Улица Победы.jpg
  | Pämez' = Tat'jana Bezuglova<br />(tal'vku 2014—)
  | Telefonkod = +7-41654-xx-xxx
  | Avtokod = 28
@@ -28,6 +28,18 @@ Pen' Lesnoi-žilo ({{lang-ru|Лесной}}, 332 rist. vl 2018) mülüb lidnanku
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 564 ristitud, rajonan ristitišton koumandez. Kaikiš suremb lidnan ristitišt oli 14 100 eläjad vozil 1992−1996. Motoambujan sodajoukun lähtend kucui depopuläcijad.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Ondrii Ezikuctud-apostolan jumalanpert'<ref>[http://sobory.ru/geo/locat/15015 Skovorodinon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i Illän Muromalaižen časoun' (2005) oma olmas lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Skovorodino engine.JPG|Nevondkundaline P36-puruvedim muštnikaks (2006)
+Scovorodino.JPG|Skovorodino-päraudtestancijan sauvuz vl 2010
+Сирийский перелом в Сковородино 05.jpg|Transsiban raudted lidnas (2019)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://admskovorodino.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admskovorodino.ru'').] {{ref-ru}}
