--- a/Lämbda.mw
+++ b/Lämbda.mw
@@ -1,4 +1,22 @@
-'''Lämbda''' ('''Λ''', '''λ''') om [[grekan kirjamišt]]on ühtenz'toštkümnenz' kirjam.
+'''Lämbda''' ('''Λ''', '''λ''', virkand {{lang-el|λάμδα / λάμβδα}} ''lamda / lambda'') om [[grekan kirjamišt]]on ühtenz'toštkümnenz' kirjam.
+
+Kirjam libui finikijan [[Phoenician Lamedh.svg]]-kirjamespäi «lamd». Latinan [[L]]-kirjam i kirilline [[Л]]-kirjam libudas grekan lämbda-kirjamespäi.
+
+== Kävutand znamaks ==
+Sur' kirjam znamoičese kut Λ erasiš-se šriftoiš. Kävutand:
+* [[kosmologine kaikenaigaine]], vai lämbda-palač;
+* [[lämbdabarionad|lämbdaheneged]] fizikas;
+* kirj [[Spart]]an armijan somuzlaudoil, znamoiči sen valdkundan tošt Lakedemon-nimitust.
+
+Ottas kävutamižhe pen't kirjant znamoičemha:
+* [[lämbdalugend]]ad matematikas;
+* [[lainhen piduz|lainhen pidust]] i [[sulamižen eriline lämuz|sulamižen erilišt lämut]] fizikas;
+* sijadusen pidust kartografijas i navigacijas.
+
+Sen ližaks [[lämbda-zond|λ-zond]] om hapanikan andim.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Lamda (letter)}}
 {{grekan kirjamišt}}
