--- a/Lämbda.mw
+++ b/Lämbda.mw
@@ -1,6 +1,6 @@
 '''Lämbda''' ('''Λ''', '''λ''', virkand {{lang-el|λάμδα / λάμβδα}} ''lamda / lambda'', {{lang-grc|λάβδα}} ''labda'') om [[grekan kirjamišt]]on ühtenz'toštkümnenz' kirjam.
 
-Kirjam libui finikijan [[Phoenician lamedh.svg]]-kirjamespäi «lamd». Latinan [[L]]-kirjam i kirilline [[Л]]-kirjam libudas grekan lämbda-kirjamespäi.
+Kirjam libui finikijan [[Fail:Phoenician lamedh.svg|25px]]-kirjamespäi «lamd». Latinan [[L]]-kirjam i kirilline [[Л]]-kirjam libudas grekan lämbda-kirjamespäi.
 
 == Kävutand znamaks ==
 Sur' kirjam znamoičese kut Λ erasiš-se šriftoiš. Kävutand:
