--- a/Ukrainalaižed.mw
+++ b/Ukrainalaižed.mw
@@ -1,7 +1,7 @@
 [[Fail:Українці02.jpg|thumb|right|250px|<center>Ukrainalaižed rahvahansädoiš [[Gustav-Teodor Pauli]]n kirjaspäi (1857).]]
 '''Ukrainalaižed''' (ičeze nimituz: ''українці'') oma [[indoevropalaižed rahvahad|indoevropalaine]], [[slavižed rahvahad|slavine rahvaz]]. 
 
-Ühthine lugu om läz 45 millionad ristituid. Ukrainalaižed elädas [[Ukrain]]as (sen ristitišton enambuz), [[Venäma]]s, [[Kanad]]as, [[Brazilii|Brazilijas]], [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]], [[Kazahstan]]as, [[Argentin]]as, [[Saksanma]]s, mugažo enččen [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|Nevondkundaližen Ühtištusen]] maiš da Päivnouzmaižen Evropan toižiš maiš.
+Ühthine lugu om läz 45 millionad ristituid. Ukrainalaižed elädas [[Ukrain]]as (sen ristitišton enambuz), [[Venäma]]s<ref>Kahtenz' surtte rahvahaline vähembuz [[totarlaižed|totarlaižiden]] jäl'ghe, vn 2010 rahvahanlugemine (ozutadud rahvahudenke): 1,4%, 1,9 mln; vn 2002 rahvahanlugemine — 2,0%, 2,9 mln eläjid.</ref>, [[Kanad]]as, [[Brazilii|Brazilijas]], [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]], [[Kazahstan]]as, [[Argentin]]as, [[Saksanma]]s, mugažo enččen [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|Nevondkundaližen Ühtištusen]] maiš da Päivnouzmaižen Evropan toižiš maiš.
 
 Rahvahan kodima sijadase [[Dnepr]]-, [[Dnestr]]- da [[Pripät']]- jogiden keskes, se om ukrainalaižiden kodima tähäsai tobman palan.
 
